--- a/styles.css
+++ b/styles.css
@@ -26,18 +26,18 @@ button, a {
 }
 
 body {
-    background-color: var(--clr-black);
+    background-color: var(--clr-white);
     display: flex;
     flex-direction: column;
     font-size: 16px;
-    color: var(--clr-white);
+    color: var(--clr-black);
     font-family: var(--ff);
     justify-content: center;
-    margin: 1vw 0vw 0vw 0vw;
+    margin: 1rem 0vw 0vw 0vw;
 }
 
 
-header {
+header, footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -46,7 +46,7 @@ header {
 
 .logo {
     text-align: center;
-    margin: 2vw 0vw 0vw 8vw;
+    margin: 1em 0vw 0vw 8vw;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -54,38 +54,64 @@ header {
 
 .logo img {
     width: auto;
-    height: 3vw;
-    filter: brightness(0) invert(1)
+    height: 2.5rem;
+    /* filter: brightness(0); */
 }
 
 .logo span {
     margin: 0vw 0vw 0vw 0.5vw;
-    font-size: 1.5rem
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.sections {
+    margin: 1em 7vw 0vw 0vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.section {
+    margin: 0vw 1vw;
+    padding: 0.5rem 0rem;
+    border-bottom: 0.25rem solid transparent;
+    font-weight: 600;
+    color: var(--clr-black);
+    text-decoration: none;
+    transition: var(--transition);
+    font-size: 1.25rem;
+}
+
+.section:hover, .section:active, .section:focus {
+    color: var(--clr-yellow);
+    border-bottom: 0.25rem solid var(--clr-jade);
 }
 
 .socials {
-    margin: 2vw 7vw 0vw 0vw;
+    margin: 1em 7vw 0vw 0vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
 .social {
-    height: 2.5vw;
-    width: 2.5vw;
-    margin: 0vw 1vw;
+    height: 1.6rem;
+    width: 1.6rem;
+    margin: 0vw 0.75vw;
     background-color: inherit;
     border: none;
     padding: 0vw;
+    transition: var(--transition);
 }
 
 .social img {
-    width: 2.5vw;
-    height: 2.5vw
+    width: 1.6rem;
+    height: 1.6rem;
+    filter: brightness(0);
 }
 
 .gmail {
-    filter: invert(1);
+    filter: none;
 }
 
 .social img:hover {
