contact form done

--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@ header, footer {
     font-weight: 700;
     font-size: 1.5rem;
     color: var(--clr-jade);
+    text-transform: uppercase;
 }
 
 input {
@@ -149,6 +150,7 @@ textarea {
     cursor: pointer;
     transition: var(--transition);
     width: fit-content;
+    text-transform: uppercase;
 }
 
 .send-button:hover, .send-button:active, .send-button:hover {
@@ -164,6 +166,7 @@ textarea {
     font-weight: 700;
     font-size: 1.5rem;
     color: var(--clr-jade);
+    text-transform: uppercase;
 }
 
 .link {
@@ -267,7 +270,7 @@ textarea {
         border: none;
     }
 
-    .menu-btn img, .close-btn img {
+    .menu-btn img, .close-btn img, .top-btn img {
         width: 2.5rem;
         height: 2.5em;
     }
@@ -319,129 +322,152 @@ textarea {
         border-left: 1vw solid var(--clr-jade);
     }
 
-.contact-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 2vw 20vw 2vw 8vw;
-}
+    .contact-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 4vw 6vw;
+    }
 
-.contact-us {
-    display: flex;
-    flex-direction: column;
-}
+    .contact-us {
+        display: flex;
+        flex-direction: column;
+    }
 
-.form-header {
-    font-weight: 700;
-    font-size: 1.5rem;
-    color: var(--clr-jade);
-}
+    .form-header {
+        font-size: 1.5rem;
+        color: var(--clr-jade);
+    }
 
-input {
-    font-size: 1rem;
-    font-family: var(--ff);
-    padding: 1rem ;
-    margin: 1rem 0vw 0vw 0vw;
-    border: none;
-    background-color: inherit;
-    border-bottom: 2px solid var(--clr-jade);
-    width: 30vw;
-}
+    input {
+        font-size: 1rem;
+        font-family: var(--ff);
+        padding: 2vw;
+        margin: 2vw 0vw 0vw 0vw;
+        border: none;
+        background-color: inherit;
+        border-bottom: 2px solid var(--clr-jade);
+        width: 84vw;
+    }
 
-textarea {
-    font-size: 1rem;
-    font-family: var(--ff);
-    padding: 1rem;
-    margin: 1rem 0vw 0vw 0vw;
-    border: none;
-    background-color: inherit;
-    border-bottom: 2px solid var(--clr-jade);
-    width: 30vw;
-}
+    textarea {
+        font-size: 1rem;
+        font-family: var(--ff);
+        padding: 2vw;
+        margin: 2vw 0vw 0vw 0vw;
+        border: none;
+        background-color: inherit;
+        border-bottom: 2px solid var(--clr-jade);
+        width: 84vw;
+    }
 
-::placeholder {
-    color: var(--clr-black);
-}
+    .send-button {
+        color: var(--clr-black);
+        background-color: inherit;
+        padding: 2vw;
+        font-size: 1rem;
+        font-weight: 700;
+        font-family: var(--ff);
+        justify-content: center;
+        font-weight: 500;
+        border: none;
+        border-bottom: 0.25rem solid var(--clr-jade);
+        margin: 0vw 0vw 10vw 0vw;
+        cursor: pointer;
+        transition: var(--transition);
+        width: fit-content;
+    }
 
-.send-button {
-    color: var(--clr-black);
-    background-color: inherit;
-    padding: 1rem;
-    font-size: 1rem;
-    font-weight: 700;
-    font-family: var(--ff);
-    justify-content: center;
-    font-weight: 500;
-    border: none;
-    border-bottom: 0.25rem solid var(--clr-jade);
-    margin: 0vw;
-    cursor: pointer;
-    transition: var(--transition);
-    width: fit-content;
-}
+    .send-button:hover, .send-button:active, .send-button:hover {
+        color: var(--clr-yellow);
+    }
 
-.send-button:hover, .send-button:active, .send-button:hover {
-    color: var(--clr-yellow);
-}
+    .links {
+        display: flex;
+        flex-direction: column;
+        margin: 2vw 0vw 6vw 0vw;
+    }
 
-.links {
-    display: flex;
-    flex-direction: column;
-}
+    .links-header {
+        font-weight: 700;
+        font-size: 1.5rem;
+        color: var(--clr-jade);
+    }
 
-.links-header {
-    font-weight: 700;
-    font-size: 1.5rem;
-    color: var(--clr-jade);
-}
+    .link {
+        margin: 1vw 0vw 0vw 0vw;
+        font-weight: 400;
+        color: var(--clr-black);
+        text-decoration: none;
+        transition: var(--transition);
+        font-size: 1rem;
+    }
 
-.link {
-    margin: 1vw 0vw 0vw 0vw;
-    font-weight: 400;
-    color: var(--clr-black);
-    text-decoration: none;
-    transition: var(--transition);
-    font-size: 1.2rem;
-}
+    .link:hover, .link:active, .link:focus {
+        color: var(--clr-yellow);
+    }
 
-.link:hover, .link:active, .link:focus {
-    color: var(--clr-yellow);
-}
+    .socials {
+        margin: 1em 6vw 0vw 0vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
 
-.socials {
-    margin: 1em 7vw 0vw 0vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
+    .social {
+        height: 1.25rem;
+        width: 1.25rem;
+        margin: 0vw 1vw;
+        background-color: inherit;
+        border: none;
+        padding: 0vw;
+        transition: var(--transition);
+    }
 
-.social {
-    height: 1.6rem;
-    width: 1.6rem;
-    margin: 0vw 0.75vw;
-    background-color: inherit;
-    border: none;
-    padding: 0vw;
-    transition: var(--transition);
-}
+    .social img {
+        width: 1.25rem;
+        height: 1.25rem;
+        filter: brightness(0);
+    }
 
-.social img {
-    width: 1.6rem;
-    height: 1.6rem;
-    filter: brightness(0);
-}
+    .gmail {
+        filter: none;
+    }
 
-.gmail {
-    filter: none;
-}
+    .social img:hover {
+        filter: brightness(0) saturate(100%) invert(82%) sepia(42%) saturate(1027%) hue-rotate(358deg) brightness(102%) contrast(104%);
+    }
 
-.social img:hover {
-    filter: brightness(0) saturate(100%) invert(82%) sepia(42%) saturate(1027%) hue-rotate(358deg) brightness(102%) contrast(104%);
-}
+    .copyright {
+        text-align: center;
+        font-size: 0.75rem;
+        margin: 4vw 0vw;
+    }
 
-.copyright {
-    text-align: center;
-    font-size: 0.8rem;
-    margin: 1rem 0vw;
-}
+    .top-btn {
+        position: absolute;
+        bottom: 14vw;
+        right: 8vw;
+        padding: 0vw;
+        display: flex;
+        justify-content: center;
+        background-color: inherit;
+        border: none;
+        transition: background-color 0.3s;
+        animation: bounce 2s infinite alternate;
+    }
+
+    @keyframes bounce {
+        0% {
+            bottom: 14vw;
+        }
+    
+        50% {
+            bottom: 12vw;
+        }
+    
+        100% {
+            bottom: 14vw;
+        }
+    }
 }
