--- a/styles.css
+++ b/styles.css
@@ -36,13 +36,17 @@ body {
     margin: 1rem 0vw 0vw 0vw;
 }
 
+.header-and-home {
+    height: 100vh;
+}
+
 header {
     background-color: var(--clr-white);
     z-index: 2;
     position: fixed;
     top: 0;
     width: 100vw;
-    padding: 0vw 0vw 1rem 0vw;
+    padding: 0vw;
 }
 
 header, footer {
@@ -87,7 +91,7 @@ header, footer {
 
 .section {
     margin: 0vw 1vw;
-    padding: 0.5rem 0rem;
+    padding: 1rem 0rem;
     border-bottom: 0.25rem solid transparent;
     font-weight: 500;
     color: var(--clr-black);
@@ -101,11 +105,72 @@ header, footer {
     border-bottom: 0.25rem solid var(--clr-jade);
 }
 
+.home {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0vw 4vw 0vw 8vw;
+    align-items: center;
+    height: calc(100vh - 3rem);
+}
+
+.home-body {
+    width: 46vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.home-body-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.home-body-text-header {
+    font-size: 4rem;
+    font-weight: 700;
+    color: var(--clr-jade);
+    margin: 0vw 0vw 1rem 0vw;
+}
+
+.home-body-text-body {
+    font-size: 1.5rem;
+    margin: 1.5rem 0rem;
+    line-height: 1.75;
+}
+
+.contact-btn {
+    color: var(--clr-black);
+    background-color: inherit;
+    padding: 1rem 0vw;
+    font-size: 1.25rem;
+    font-weight: 700;
+    justify-content: center;
+    text-decoration: none;
+    border: none;
+    border-bottom: 0.25rem solid var(--clr-jade);
+    margin: 3em 0vw 0vw 0vw;
+    transition: var(--transition);
+    width: fit-content;
+}
+
+.contact-btn:hover, .contact-btn:active, .contact-btn:focus {
+    color: var(--clr-yellow);
+}
+
+.home-hero {
+    width: 42vw;
+    height: 50vw;
+    background-image: url(assets/desktop-hero.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
+}
+
 .contact-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 4vw 20vw 2vw 8vw;
+    margin: 2vw 20vw 2vw 8vw;
 }
 
 .contact-us {
@@ -154,7 +219,6 @@ textarea {
     font-weight: 700;
     font-family: var(--ff);
     justify-content: center;
-    font-weight: 500;
     border: none;
     border-bottom: 0.25rem solid var(--clr-jade);
     margin: 0vw;
@@ -243,6 +307,8 @@ textarea {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
+        padding: 0vw 0vw 0.5rem 0vw;
         /* z-index: 2; */
     }
 
@@ -334,6 +400,61 @@ textarea {
         border-left: 1vw solid var(--clr-jade);
     }
 
+    .home {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    margin: 0vw 6vw;
+    align-items: center;
+    height: calc(100vh - 3rem);
+    }
+
+    .home-body {
+        width: 88vw;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .home-body-text {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .home-body-text-header {
+        font-size: 2.5rem;
+        margin: 0vw 0vw 0.5rem 0vw;
+    }
+
+    .home-body-text-body {
+        font-size: 1rem;
+        margin: 0.5rem 0rem;
+        line-height: 1.75;
+    }
+
+    .contact-btn {
+        color: var(--clr-black);
+        background-color: inherit;
+        padding: 0,5rem 0vw;
+        font-size: 1rem;
+        font-weight: 700;
+        justify-content: center;
+        text-decoration: none;
+        border: none;
+        border-bottom: 0.25rem solid var(--clr-jade);
+        margin: 1em 0vw 0vw 0vw;
+        transition: var(--transition);
+        width: fit-content;
+    }
+
+    .home-hero {
+        width: 88vw;
+        height: 40vh;
+        background-image: url(assets/mobile-hero.jpg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: right;
+    }
+
     .contact-container {
         display: flex;
         flex-direction: column;
@@ -381,7 +502,6 @@ textarea {
         font-weight: 700;
         font-family: var(--ff);
         justify-content: center;
-        font-weight: 500;
         border: none;
         border-bottom: 0.25rem solid var(--clr-jade);
         margin: 0vw 0vw 10vw 0vw;
@@ -453,7 +573,7 @@ textarea {
     .copyright {
         text-align: center;
         font-size: 0.75rem;
-        margin: 4vw 0vw;
+        margin: 2vw 0vw 4vw 0vw;
     }
 
     .top-btn {
