--- a/styles.css
+++ b/styles.css
@@ -394,7 +394,7 @@ textarea {
         font-size: 1.2rem;
     }
 
-    .section:active, .section:focus {
+    .section:hover, .section:active, .section:focus {
         color: var(--clr-yellow);
         border: none;
         border-left: 1vw solid var(--clr-jade);
@@ -453,6 +453,7 @@ textarea {
         background-repeat: no-repeat;
         background-size: contain;
         background-position: right;
+        margin: 1rem 0vw 0vw 0vw;
     }
 
     .contact-container {
@@ -540,15 +541,15 @@ textarea {
     }
 
     .socials {
-        margin: 1em 6vw 0vw 0vw;
+        margin: 0.25rem 0vw 0vw 0vw;
         display: flex;
         flex-direction: row;
         justify-content: center;
     }
 
     .social {
-        height: 1.25rem;
-        width: 1.25rem;
+        height: 1.5rem;
+        width: 1.5rem;
         margin: 0vw 1vw;
         background-color: inherit;
         border: none;
@@ -557,8 +558,8 @@ textarea {
     }
 
     .social img {
-        width: 1.25rem;
-        height: 1.25rem;
+        width: 1.5rem;
+        height: 1.5rem;
         filter: brightness(0);
     }
 
@@ -580,6 +581,8 @@ textarea {
         position: fixed;
         bottom: 14vw;
         right: 8vw;
+        width: 3.5rem;
+        height: 3.5rem;
         padding: 0vw;
         display: flex;
         justify-content: center;
@@ -593,6 +596,17 @@ textarea {
 
     .show-btn {
         display: block;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    footer .logo {
+        margin: 0.5rem 0vw;
     }
 
     @keyframes bounce {
