--- a/styles.css
+++ b/styles.css
@@ -548,9 +548,9 @@ textarea {
     }
 
     .social {
-        height: 1.5rem;
-        width: 1.5rem;
-        margin: 0vw 1vw;
+        height: 1.3rem;
+        width: 1.3rem;
+        margin: 0vw 1.5vw;
         background-color: inherit;
         border: none;
         padding: 0vw;
@@ -558,8 +558,8 @@ textarea {
     }
 
     .social img {
-        width: 1.5rem;
-        height: 1.5rem;
+        width: 1.3rem;
+        height: 1.3rem;
         filter: brightness(0);
     }
 
@@ -581,8 +581,8 @@ textarea {
         position: fixed;
         bottom: 14vw;
         right: 8vw;
-        width: 3.5rem;
-        height: 3.5rem;
+        width: 10vw;
+        height: 10vw;
         padding: 0vw;
         display: flex;
         justify-content: center;
