--- a/styles.css
+++ b/styles.css
@@ -499,6 +499,7 @@ textarea {
 
     .about {
         margin: 0vw 6vw;
+        padding: 3rem 0vw 0vw 0vw;
         display: flex;
         flex-direction: column;
     }
@@ -526,7 +527,8 @@ textarea {
     }
 
     .mission {
-        margin: 1rem 6vw;
+        margin: 0ve 6vw;
+        padding: 3rem 0vw 0vw 0vw;
         display: flex;
         flex-direction: column;
         font-size: 1rem;
@@ -553,7 +555,8 @@ textarea {
     }
 
     .act {
-        margin: 3rem 6vw 0vw 6vw;
+        margin: 0vw 6vw;
+        padding: 3rem 0vw 0vw 0vw;
         display: flex;
         flex-direction: column;
         line-height: 1.6;
