--- a/styles.css
+++ b/styles.css
@@ -238,9 +238,16 @@ header, footer {
     justify-content: centre;
 }
 
+.map-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: ceenter;
+}
+
 #map {
     height: 20rem;
-    width: 80vw;
+    width: 84vw;
 }
 
 .contact-container {
