--- a/styles.css
+++ b/styles.css
@@ -241,13 +241,90 @@ header, footer {
 .map-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: ceenter;
+    justify-content: center;;
+}
+
+.map-container-text {
+    font-size: 1.2rem;
+    margin: 0.5rem 0vw;
+    font-weight: 700;
 }
 
 #map {
-    height: 20rem;
+    height: 30rem;
     width: 84vw;
+    z-index: -2;
+    margin: 1rem 0vw;
+}
+
+.number-container {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 0vw;
+    font-size: 1.2em;
+    font-weight: 700;
+}
+
+.numbers {
+    display: flex;
+    flex-direction: column;
+    color: var(--clr-jade);
+    margin: 0.5rem 0vw;
+}
+
+.number {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.number img {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 0vw 0.25rem 0vw 0vw;
+    filter: brightness(0) saturate(100%) invert(38%) sepia(8%) saturate(2593%) hue-rotate(97deg) brightness(105%) contrast(99%);
+}
+
+.newsletter-container {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 0vw;
+    font-size: 1.2em;
+    font-weight: 700;
+}
+
+#newsletterForm {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
+
+.final {
+    width: 40vw;
+    border-bottom: 0.25rem solid var(--clr-jade);
+}
+
+.subscribe-button {
+    margin: 1rem 0vw 0vw 3vw;
+    color: var(--clr-black);
+    background-color: inherit;
+    padding: 1rem;
+    font-size: 1rem;
+    font-weight: 700;
+    font-family: var(--ff);
+    justify-content: center;
+    border: none;
+    border-bottom: 0.25rem solid var(--clr-jade);
+    cursor: pointer;
+    transition: var(--transition);
+    height: fit-content;
+    width: fit-content;
+    text-transform: uppercase;
+}
+
+.subscribe-button:hover, .subscribe-button:active, .subscribe-button:hover {
+    color: var(--clr-yellow);
 }
 
 .contact-container {
@@ -583,6 +660,101 @@ textarea {
         line-height: 1.6;
     }
 
+    .act-body {
+        display: flex;
+        flex-direction: column;
+        justify-content: centre;
+    }
+
+    .map-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;;
+    }
+
+    .map-container-text {
+        font-size: 1rem;
+        margin: 0.5rem 0vw;
+        font-weight: 700;
+    }
+
+    #map {
+        height: 20rem;
+        width: 88vw;
+        z-index: -2;
+        margin: 1rem 0vw;
+    }
+
+    .number-container {
+        display: flex;
+        flex-direction: column;
+        margin: 2rem 0vw;
+        font-size: 1em;
+        font-weight: 700;
+    }
+
+    .numbers {
+        display: flex;
+        flex-direction: column;
+        color: var(--clr-jade);
+        margin: 0.5rem 0vw;
+    }
+
+    .number {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .number img {
+        width: 1.5rem;
+        height: 1.5rem;
+        margin: 0vw 0.25rem 0vw 0vw;
+        filter: brightness(0) saturate(100%) invert(38%) sepia(8%) saturate(2593%) hue-rotate(97deg) brightness(105%) contrast(99%);
+    }
+
+    .newsletter-container {
+        display: flex;
+        flex-direction: column;
+        margin: 2rem 0vw;
+        font-size: 1rem;
+        font-weight: 700;
+    }
+
+    #newsletterForm {
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        align-items: flex-start;
+        margin: 0.5rem 0vw;
+    }
+
+    .final {
+        width: 80vw;
+        border-bottom: 0.2rem solid var(--clr-jade);
+    }
+
+    .subscribe-button {
+        margin: 0.5rem 0vw 0vw 0vw;
+        color: var(--clr-black);
+        background-color: inherit;
+        padding: 0.5rem;
+        font-size: 1rem;
+        font-weight: 700;
+        font-family: var(--ff);
+        justify-content: center;
+        border: none;
+        border-bottom: 0.2rem solid var(--clr-jade);
+        cursor: pointer;
+        transition: var(--transition);
+        height: fit-content;
+        width: fit-content;
+        text-transform: uppercase;
+    }
+
+    .subscribe-button:hover, .subscribe-button:active, .subscribe-button:hover {
+        color: var(--clr-yellow);
+    }
 
     .contact-btn {
         color: var(--clr-black);
